# kafka-rust-playground

./: .gitignore  Makefile  README.md  docker-compose.yml  pom.xml
rs/: Cargo.toml
rs/src/: main.rs
src/main/java/org/example/: KafkaBase.java  Main.java  SimpleKafkaConsumer.java  SimpleKafkaProducer.java
