[package]
name = "rs"
version = "0.1.0"
authors = ["Nikolai Golub <nikolay.v.golub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.8"
chrono = "0.4"
log = "0.4.14"
env_logger = "0.8.3"
byteorder = "1.4.3"
zerocopy = "0.5.0"
